New cheat to set amount of held runes