@@ -64,13 +64,9 @@ item_dict = {
         'Talisman Pouch':[56, 39],
         'Dragon Heart':[76, 39],
         'Celestial Dew':[82, 8],
-    },
-    "Tools": {
-        "Rune Arc": [190, 0],
-        "Starlight Shards":[10, 5],
-        "Gold Pickled Foot": [176, 4],
-        "Silver Pickled Foot": [166,4],
-        "Bewitching Branches": [22,13]
+        'Deathroot':[42, 8],
+        'Lost Ashes of War':[86, 39],
+
     },
     "Gloveworts": {
         "Grave Glovewort [1]": [148, 42],
@@ -95,72 +91,77 @@ item_dict = {
         "Great Ghost Glovewort": [167, 42],
     },
     "Consumables": {
-
-        "Bloodboil Aromatic": [222,13],
-        "Neutralizing Boluses": [132, 3],
-        "Stanching Boluses": [142, 3],
-        "Thawfrost Boluses": [152, 3],
-        "Stimulating Boluses": [162, 3],
-        "Preserving Boluses": [172, 3],
-        "Rejuvenating Boluses": [182, 3],
-        "Clarifying Boluses": [192, 3],
-        "Exalted Flesh": [186,4],
-        'Spellproof Dried Liver':[126, 4],
-        'Fireproof Dried Liver':[136, 4],
-        'Lightningproof Dried Liver':[146, 4],
-        'Holyproof Dried Liver':[156, 4],
-        'Immunizing White Cured Meat':[30, 5],
-        'Invigorating White Cured Meat':[40, 5],
-        'Clarifying White Cured Meat':[50, 5],
-        'Dappled White Cured Meat':[60, 5],
-
+   'Baldachin\'s Blessing': [32, 13],
+    'Bloodboil Aromatic': [222, 13],
+    'Bewitching Branches': [22, 13],
+    'Clarifying Boluses': [192, 3],
+    'Clarifying White Cured Meat': [50, 5],
+    'Dappled White Cured Meat': [60, 5],
+    'Exalted Flesh': [186, 4],
+    'Fireproof Dried Liver': [136, 4],
+    'Glowstone': [238, 7],
+    'Gold Pickled Foot': [176, 4],
+    'Holyproof Dried Liver': [156, 4],
+    'Immunizing White Cured Meat': [30, 5],
+    'Invigorating White Cured Meat': [40, 5],
+    'Lightningproof Dried Liver': [146, 4],
+    'Neutralizing Boluses': [132, 3],
+    'Preserving Boluses': [172, 3],
+    'Radiant Baldachin\'s Blessing': [33, 13],
+    'Rainbow Stone': [228, 7],
+    'Rejuvenating Boluses': [182, 3],
+    'Rune Arc': [190, 0],
+    'Silver Pickled Foot': [166, 4],
+    'Soft Cotton': [52, 8],
+    'Spellproof Dried Liver': [126, 4],
+    'Stanching Boluses': [142, 3],
+    'Starlight Shards': [10, 5],
+    'Stimulating Boluses': [162, 3],
+    'Thawfrost Boluses': [152, 3],
     },
 
     "Grease": {
-        'Fire Grease':[120, 5],
-        'Lightning Grease':[130, 5],
-        'Magic Grease':[140, 5],
-        'Holy Grease':[150, 5],
-        'Blood Grease':[160, 5],
-        'Soporific Grease':[170, 5],
-        'Poison Grease':[180, 5],
-        'Freezing Grease':[190, 5],
-        'Dragonwound Grease':[200, 5],
-        'Rot Grease':[210, 5],
-        'Drawstring Fire Grease':[220, 5],
-        'Drawstring Lightning Grease':[230, 5],
-        'Drawstring Magic Grease':[240, 5],
-        'Drawstring Holy Grease':[250, 5],
-        'Drawstring Blood Grease':[4, 6],
-        'Drawstring Soporific Grease':[14, 6],
-        'Drawstring Poison Grease':[24, 6],
-        'Drawstring Freezing Grease':[34, 6],
-        'Drawstring Rot Grease':[54, 6],
-        'Shield Grease':[154, 6],
-        'Holy Water Grease':[228, 12],
-
+    'Blood Grease': [160, 5],
+    'Blood Grease': [4, 6],
+    'Drawstring Blood Grease': [4, 6],
+    'Drawstring Fire Grease': [220, 5],
+    'Drawstring Freezing Grease': [34, 6],
+    'Drawstring Holy Grease': [250, 5],
+    'Drawstring Lightning Grease': [230, 5],
+    'Drawstring Magic Grease': [240, 5],
+    'Drawstring Poison Grease': [24, 6],
+    'Drawstring Rot Grease': [54, 6],
+    'Drawstring Soporific Grease': [14, 6],
+    'Dragonwound Grease': [200, 5],
+    'Fire Grease': [120, 5],
+    'Freezing Grease': [190, 5],
+    'Holy Grease': [150, 5],
+    'Holy Water Grease': [228, 12],
+    'Lightning Grease': [130, 5],
+    'Magic Grease': [140, 5],
+    'Poison Grease': [180, 5],
+    'Rot Grease': [210, 5],
+    'Shield Grease': [154, 6],
+    'Soporific Grease': [170, 5],
     },
 
     "Remembrance": {
-        "R- The Grafted":[134,11],
-        "R- Starsourge":[135,11],
-        "R - Omen King":[136,11],
-        "R- Blasphemous":[137,11],
-        "R- Rot Goddess":[138,11],
-        "R- Blood Lord":[139,11],
-        "R- Black Blade":[140,11],
-        "R- Hoarah Loux":[141,11],
-        "R- DragonLord":[142,11],
-        "R- Full Moon Queen":[143,11],
-        "R- Lich Dragon":[144,11],
-        "R- Fire Giant":[145,11],
-        "R- Regal Ancestor":[146,11],
-        "R- Elden":[147,11],
-        "R- Naturalborn":[148,11],
+    'R - Black Blade': [140, 11],
+    'R- Blasphemous': [137, 11],
+    'R- Blood Lord': [139, 11],
+    'R- DragonLord': [142, 11],
+    'R- Elden': [147, 11],
+    'R- Fire Giant': [145, 11],
+    'R- Full Moon Queen': [143, 11],
+    'R- Hoarah Loux': [141, 11],
+    'R- Lich Dragon': [144, 11],
+    'R- Naturalborn': [148, 11],
+    'R - Omen King': [136, 11],
+    'R- Regal Ancestor': [146, 11],
+    'R- Rot Goddess': [138, 11],
+    'R- Starsourge': [135, 11],
+    'R- The Grafted': [134, 11],
     },
-    "Ash of War": {
-        "Lost Ash of War": [86, 39],
-    }
 
 }
 
