@@ -13,8 +13,8 @@ backupdir = "./data/backup/"
 update_dir = "./data/updates/"
 temp_dir = "./data/temp/"
 post_update_file = "./data/post.update"
-version = "v1.68"
-v_num = 1.68  # Used for checking version for update
+version = "v1.69"
+v_num = 1.69  # Used for checking version for update
 video_url = "https://youtu.be/LQxmFuq3dfg"
 custom_search_tutorial_url = "https://youtu.be/li-ZiMXBmRk"
 background_img = "./data/background.png"
